--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,24 @@
   background: -o-radial-gradient(rgb(120, 0, 22) 5%, rgb(106, 0, 22) 15%, rgb(85, 1, 16) 60%); /* For Opera 11.6-12.0 */
   background: -moz-radial-gradient(rgb(120, 0, 22) 5%, rgb(106, 0, 22) 15%, rgb(85, 1, 16) 60%); /* For Firefox 3.6-15 */
   background: radial-gradient(rgb(120, 0, 22) 5%, rgb(106, 0, 22) 15%, rgb(85, 1, 16) 60%); /* Standard syntax */
-  height: 50px;
+  width: 100%;
   margin-top: 1.8em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*align-self: center;*/
+}
+
+.flexitem {
+	padding: 1em;
+	width: 16%;
+}
+
+.flexitemteam {
+	padding: 1em;
+}
+
+img {
+	max-height: 100%;
+	max-width: 100%;
 }
