--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /*align-self: center;*/
 }
 
 .flexitem {
@@ -45,6 +44,18 @@
 
 .flexitemteam {
 	padding: 1em;
+}
+
+.flexitemevents {
+	padding: 1em;
+	width: 32%;
+}
+
+.eventscontainer {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 img {
