--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,11 +25,9 @@
 }
 
 .mainpagepics {
-  background: rgb(85, 1, 16);
-  background: -webkit-radial-gradient(rgb(120, 0, 22) 5%, rgb(106, 0, 22) 15%, rgb(85, 1, 16) 60%); /* Safari 5.1-6.0 */
-  background: -o-radial-gradient(rgb(120, 0, 22) 5%, rgb(106, 0, 22) 15%, rgb(85, 1, 16) 60%); /* For Opera 11.6-12.0 */
-  background: -moz-radial-gradient(rgb(120, 0, 22) 5%, rgb(106, 0, 22) 15%, rgb(85, 1, 16) 60%); /* For Firefox 3.6-15 */
-  background: radial-gradient(rgb(120, 0, 22) 5%, rgb(106, 0, 22) 15%, rgb(85, 1, 16) 60%); /* Standard syntax */
+  background-image: url('../img/index/6.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
   width: 100%;
   margin-top: 1.8em;
   display: flex;
@@ -39,7 +37,7 @@
 
 .flexitem {
 	padding: 1em;
-	width: 16%;
+	width: 20%;
 }
 
 .flexitemteam {
