--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,3 +77,12 @@ td {
 	width:auto;
 	min-width:10px;
 }
+
+body {
+	text-align: center;
+	font-family: "Times New Roman", Times, serif;
+}
+
+.title {
+	font-size: 1.5em;
+}
