--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,9 +97,15 @@ h2 {
 
 h2 span {
    color: white;
-   font: bold 48px/90px Helvetica, Sans-Serif;
+   font: bold 48px/48px Helvetica, Sans-Serif;
    letter-spacing: -1px;
    background: rgb(0, 0, 0);
    background: rgba(0, 0, 0, 0.2);
    padding: 10px;
+}
+
+p {
+	font-size: 1.7em;
+	/*text-align: left;*/
+	padding: 2.5em;
 }
